# icebrg

./: .gitignore  .vercelignore  AI_CONSTITUTION.md  ASSESSOR_WEBSITE_DIAGNOSIS_20260127_232423.json  ASSESSOR_WEBSITE_ERROR_DIAGNOSIS.md  CHANGELOG.md  COURT_REPORT_ERIK_STROMBECK_FINANCIAL_CONCEALMENT.md  DEEP_PROPERTY_MINING.json  DEEP_RESEARCH_SUMMARY.md  DEEP_VERIFICATION_DATA_20260127_012917.json  DEEP_VERIFICATION_REPORT_20260127_012917.md  DEEP_WEB_RESEARCH_DATA_20260126_234630.json  DEEP_WEB_RESEARCH_DATA_20260126_234743.json  DEEP_WEB_RESEARCH_REPORT_20260126_234630.md  DEEP_WEB_RESEARCH_REPORT_20260126_234743.md  DEPLOYMENT_ASSESSMENT.md  ENGINEERING_PRACTICES.md  FEATURES_INVENTORY.md  FULL_SYSTEM_AUDIT.md  GLOBAL_MIDDLEWARE_IMPLEMENTATION.md  GLOBAL_MIDDLEWARE_TEST_RESULTS.md  HIDDEN_PATTERNS_ANALYSIS.json  ICEBURG_OVERVIEW.md  MIDDLEWARE_TEST_RESULTS.md  MINING_SYSTEM_COMPLETE.md  MULTI_STATE_LLC_ASSET_HIDING_ANALYSIS.md  NETWORK_EXPANSION_STATUS.md  NOVEMBER_2022_INCIDENT_ANALYSIS.md  ORGANIZATION_SUMMARY.md  PROPERTY_965_HARRIS_ANALYSIS.md  PROPERTY_TRANSACTION_ANALYSIS.json  PROPERTY_TRANSACTION_STATUS.md  README.md  SECRETARY_AGI_ENHANCEMENT_PLAN.md  SECRETARY_ENHANCEMENT_SUMMARY.md  TEST_RESULTS.md  TODD_COURT_PROPERTIES_DATA_20260127_231410.json  TODD_COURT_PROPERTIES_DATA_20260127_231430.json  TODD_COURT_PROPERTIES_RESEARCH_20260127_231410.md  TODD_COURT_PROPERTIES_RESEARCH_20260127_231430.md  (+25 more)
api/: encyclopedia-category.js  encyclopedia-search.js  encyclopedia.js  encyclopedia.py  health.js  package.json  query.js
benchmarks/: README.md  __init__.py  (+11 more)
(+1644 files in other folders)
