[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iceburg"
version = "2.0.0"
description = "ICEBURG 2.0: Ultimate Truth-Finding AI Civilization"
authors = [{ name = "Jack Danger", email = "contact@jackdanger.dev" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ollama>=0.2.1",
  "chromadb>=0.5.5",
  "pydantic>=2.8.0",
  "networkx>=3.2.1",
  "numpy>=1.26.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
  "click>=8.1.7",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "aiohttp>=3.9.0",
  "asyncio>=3.4.3",
]

[project.optional-dependencies]
frontier = [
  "anthropic>=0.18.0",
  "openai>=1.12.0",
  "google-generativeai>=0.3.0",
]
lab = [
  "qiskit>=1.0.0",
  "cirq>=1.3.0",
  "matplotlib>=3.8.0",
  "plotly>=5.18.0",
]
visual = [
  "pillow>=10.0.0",
  "opencv-python>=4.8.0",
  "pytesseract>=0.3.10",
]
security = [
  "requests>=2.31.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "flake8>=6.1.0",
  "black>=23.11.0",
  "mypy>=1.7.0",
]

[project.scripts]
iceburg = "iceburg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
